Minor change to UIRoot file for fixing horizontal alignment

--- a/src/components/UIRoot/UIRoot.module.css
+++ b/src/components/UIRoot/UIRoot.module.css
@@ -4,7 +4,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
 }
 
 .left-side-panel {
